2009-03-09 John Wu <John.Wu at ACM.org>
	* tests/Makefile.am: add check-marksdb to run through the three
	queries provided by David B. Marks <marksdb @ cox.net>
	* src/qExpr.h, src/qExpr.cpp: add
	ibis::math::preserveInputExpressions to make it possible to bypass
	optimization of arithmetic expressions

2009-03-08 John Wu <John.Wu at ACM.org>
	* src/Doxyfile: include directory java/gov/lbl/fastbit
	* java/README: add mention of FastBitStringWriter and
	FastBitStringReader
	* java/gov/lbl/fastbit/*.java: update in-line documentation

2009-03-07 John Wu <John.Wu at ACM.org>
	* tests/readcsv.cpp: add new function readALine to handle comment
	lines started with # and --, to match the comments accepted by
	ibis::tafel::readCSV

2009-03-06 John Wu <John.Wu at ACM.org>
	* src/fileManager.cpp:922 remove mit and reuse variable it,
	statements 924 and 925 mistakenly used it instead of mit and was
	causing problems (a problem reported by Andrey Kolchanov)
	* src/util.h: clean up the documentation about envLock
	* src/query.h: change readLock and writeLock to from protected to
	public
	* src/capi.cpp: make use of the ibis::query::writeLock instead of
	ibis::util::envLock when manipulating the content cached for each
	query
	* src/resource.cpp: in resource::add remove the statements that
	delete the group with the same name as a value being added
	* win/Win.mak, win/MinGW.mak: include the new file countQuery.cpp

2009-03-05 John Wu <John.Wu at ACM.org>
	* src/bitvector64.cpp:1070 same problem at Norbert found in
	bitvector.cpp

2009-03-05 Norbert Heusser <heusser at online.de>
	* src/bitvector.cpp:1353 add call to nosharing() before modifying
	m_vec

2009-03-04 John Wu <John.Wu at ACM.org>
	* configure.ac: add AC_LAN(C++) to make the default language to be
	C++, fix the problem with header file FlexLexer.h
	* INSTALL: add note 10 about java compilation problem
	* Makefile.am, src/Makefile.am, java/Makefile.am,
	tests/Makefile.am: use EXTRA_DIST to replace dist_data...