@@ -517,6 +517,8 @@ namespace ibis {
 		       std::vector<ibis::bitvector> &res);
 	/// Deallocate the bit vectors.
 	void clean(std::vector<ibis::bitvector*> &bv) throw();
+	/// Deallocate the list of data partitions.
+	void clean(ibis::partList &pl) throw();
 	/// Return the current time in string format as @c asctime_r.
 	/// The argument @c str must have 26 or more bytes and is used to
 	/// carry the time output.
